fixed css on tablet + removed comments

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -28,32 +28,10 @@
     display: none;
   }
 
-  /* ABOUT ME SECTION (2) */
-  /* .about-me {
-    margin-bottom: 7rem;
-  } */
-
-  /* .green-background {
-    width: 20rem;
-    height: 42.5rem;
-  } */
-
   .info-card {
     margin-left: 15%;
     width: 34%;
   }
-
-  /* .white-border {
-    height: 3rem;
-    width: 20rem;
-  } */
-
-  /* .about-me-text {
-    margin-left: 30rem;
-    margin-top: 5rem;
-    margin-right: 1rem;
-    justify-content: center;
-  } */
 
   .info-card-text {
     font-size: 18px;
@@ -64,7 +42,7 @@
   }
 
   .competence {
-    margin-bottom: 16rem;
+    margin-bottom: 25rem;
   }
 
   /* PORTFOLIO SECTION (3) */
@@ -96,49 +74,20 @@
 }
 
 @media (max-width: 880px) {
-  /* ABOUT ME SECTION (2) */
-  /* .green-background {
-    width: 19rem;
-  } */
-
-  /* .info-card {
-    margin-left: 4rem;
-  } */
-
-  /* .about-me-box {
-    width: 100%;
-  } */
-
-  /* .about-me-text {
-    margin-left: 25.5rem;
-  } */
-
   .competence {
-    margin-top: 8rem;
-    margin-bottom: 16rem;
+    margin-top: 13rem;
+    margin-bottom: 20rem;
   }
 }
 
 @media (max-width: 780px) {
   /* ABOUT ME SECTION (2) */
-  /* .green-background {
-    width: 16rem;
-  } */
-
   .info-card {
     margin-left: 10%;
     width: 39%;
   }
 
-  /* .white-border {
-    width: 18rem;
-  } */
-
   .about-me-box {
     width: 100%;
   }
-
-  /* .about-me-text {
-    margin-left: 22rem;
-  } */
 }
